--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^0.4.0+8
   google_sign_in: ^4.0.0
   firebase_auth: ^0.15.0+1
+  firebase_messaging: ^6.0.9
   flutter_bloc: ^3.2.0
   equatable: ^1.0.0
   meta: ^1.1.6
