--- a/login_app/pubspec.yaml
+++ b/login_app/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/data/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
